--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:e2e": "jest __tests__ --verbose --config=./jest.config.js",
+    "test:e2e:focus": "NODE_ENV=dev jest --verbose --config=./jest.config.js"
   },
   "devDependencies": {
     "chalk": "^2.3.0",
