--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:7.10      
+      - image: circleci/classic:latest      
 
     working_directory: ~/repo
 
@@ -16,9 +16,9 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run:
-          name: Workaround for GoogleChrome/puppeteer#290
-          command: 'sh .circleci/setup_puppeteer.sh'
+      # - run:
+      #     name: Workaround for GoogleChrome/puppeteer#290
+      #     command: 'sh .circleci/setup_puppeteer.sh'
 
       - run: yarn install
 
